@@ -1,3 +1,8 @@
+Mon Jan 21 05:37:28 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Compiler.java: new command line
+	  option -v (show arguments of external command invocation).
+
 Mon Jan 21 05:28:46 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java: new command line
